--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "NodeChatSystem",
+  "name": "translator",
   "version": "0.0.1",
-  "description": "Realtime chat system for Tutorialzine.com",
+  "description": "e",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "node",
-    "chat",
-    "system"
-  ],
-  "author": "Nikolay Anastasov",
   "license": "MIT",
   "dependencies": {
     "ejs": "^1.0.0",
