--- a/package.json
+++ b/package.json
@@ -12,5 +12,20 @@
     "express": "^4.8.2",
     "gravatar": "~1.0.6",
     "socket.io": "1.0.6"
+  }, 
+  "devDependencies": {
+    "autoprefixer": "^6.3.7",
+    "cssnext": "^1.8.4",
+    "csswring": "^5.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-csslint": "^0.3.1",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^1.5.4",
+    "precss": "^1.4.0"
   }
 }
